Bug Fix: Rendering stuck due to thread issue of WebMediaPlayerMSCompositor

We observed this when rendering canvas captured frame with alpha
channel. The underlying reason is that it would take a longer time
to process a frame with alpha channel, and thus when PutCurrentFrame()
is called, the |current_frame_| has already been changed, but
we still mark |current_frame_used| to be true, which will make
UpdateCurrentFrame() to return false, and thus chrome compositor
will stop updating.

This CL essentiall moves setting of |current_frame_used| back
to GetCurrentFrame().

BUG=606890

Review-Url: https://codereview.chromium.org/1930003002
Cr-Commit-Position: refs/heads/master@{#390757}

Former-commit-id: d0a271c39cd8ba5292dd184acd6f7565d1f7348a